--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+button {
+  outline: none;
+  border: 0;
+  cursor: pointer;
+}
+
+.header {
+  background-color: blanchedalmond;
+  font-size: 2.5rem;
+  padding: 1rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-logo {
+  margin: 0 1rem;
+  color: green;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header-count {
+  display: inline-block;
+  background-color: green;
+  border-radius: 50%;
+  font-size: 2rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  text-align: center;
+  margin-left: 0.3em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.habit {
+  font-size: 2.5rem;
+  padding: 0.5em;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.habit-count {
+  display: inline-block;
+  background-color: darkcyan;
+  border-radius: 50%;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  text-align: center;
+  margin-left: 0.2em;
+  margin-right: 0.3em;
+  color: white;
+}
+
+.habit-button {
+  font-size: 2.5rem;
+  margin: 0 0.1em;
+  background-color: transparent;
+}
+
+.habit-button:hover {
+  opacity: 0.8;
+}
+
+.habit-increase,
+.habit-decrease {
+  color: royalblue;
+}
+
+.habit-delete {
+  font-size: 2rem;
+  color: grey;
 }
