--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,130 @@
-* {
+@charset "UTF-8";
+
+/* 리셋 */
+html, body, main, footer, div, span, p, ol, ul, li, /**/
+h1, h2, h3, h4, h5, h6, em, strong, address {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
   box-sizing: border-box;
 }
 
-button {
-  outline: none;
-  border: 0;
-  cursor: pointer;
-}
-
-.header {
-  background-color: blanchedalmond;
-  font-size: 2.5rem;
-  padding: 1rem;
-  text-align: center;
-}
-
-.header-logo {
-  margin: 0 1rem;
-  color: green;
-}
-
-.header-count {
-  display: inline-block;
-  background-color: green;
-  border-radius: 50%;
-  font-size: 2rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  text-align: center;
-  margin-left: 0.3em;
-  color: white;
-}
-
-.habit {
-  font-size: 2.5rem;
-  padding: 0.5em;
+ol,
+ul {
   list-style: none;
 }
 
-.habit-count {
-  display: inline-block;
-  background-color: darkcyan;
-  border-radius: 50%;
+body {
+  font-family: '나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif;
+  line-height: 1;
+  background-color: ghostwhite;
+}
+
+/* 헤더 */
+header {
+  background-color: azure;
+  height: 68px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2rem;
-  line-height: 2.5rem;
-  width: 2.5rem;
-  height: 2.5rem;
+}
+
+.header-logo {
+  color: cadetblue;
+  margin-right: 12px;
+}
+
+.header-count {
+  background-color: cornflowerblue;
+  height: 32px;
+  width: 32px;
+  font-size: 1.5rem;
+  line-height: 16px;
   text-align: center;
-  margin-left: 0.2em;
-  margin-right: 0.3em;
   color: white;
+  border-radius: 50%;
+  padding: 0.5rem;
+  margin-left: 12px;
+}
+
+/* Add form */
+.add-form {
+  display: flex;
+  justify-content: center;
+  height: 28px;
+  padding: 14px;
+}
+
+.add-input {
+  padding: 5px;
+  border: 1px solid cornflowerblue;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+
+.add-button {
+  background-color: cadetblue;
+  border-radius: 4px;
+  border: none;
+}
+
+/* 습관 리스트 */
+.habit-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.25rem;
+  min-height: 420px;
+}
+
+.habit {
+  padding: 0.5rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.habit-count {
+  background-color: cornflowerblue;
+  text-align: center;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  color: white;
+  border-radius: 50%;
+  margin: 0 12px;
 }
 
 .habit-button {
-  font-size: 2.5rem;
-  margin: 0 0.1em;
-  background-color: transparent;
+  height: 24px;
+  margin-right: 5px;
+  border-radius: 4px;
 }
 
-.habit-button:hover {
-  opacity: 0.8;
+.habit-increase {
+  color: orangered;
+  border: 1px solid orangered;
 }
 
-.habit-increase,
 .habit-decrease {
-  color: royalblue;
+  color: blue;
+  border: 1px solid blue;
 }
 
 .habit-delete {
-  font-size: 2rem;
-  color: grey;
+  color: gray;
+  border: 1px solid gray;
+}
+
+.habits-reset {
+  display: block;
+  margin: auto;
+  padding: 8px;
+  background-color: cadetblue;
+  color: white;
+  border-radius: 4px;
+  border: none;
 }
